Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/header_chanpin.html
+++ b/Myerp/Tpl/Chanpin/header_chanpin.html
@@ -34,8 +34,8 @@ function dotest(dotype){
 
 function shenhe_after(data,status){
 	if(status == 1){
-//		alert(data['status_shenhe']+"操作成功！！");
-//		location.reload();
+		alert(data['status_shenhe']+"操作成功！！");
+		location.reload();
 	}
 }
 </script>
