--- a/Myerp/Tpl/Chanpin/kongguan.html
+++ b/Myerp/Tpl/Chanpin/kongguan.html
@@ -89,14 +89,14 @@
           <th scope="col" nowrap="nowrap"><input type="checkbox" value="" id="checkboxall" onclick="myCheckBoxSelect(this)"></th>
           <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:120px;"><div> 团号 </div></th>
-          <th scope="col" nowrap="nowrap" style="min-width:300px; width:30%;"><div> 产品名称 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:250px;"><div> 产品名称 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 出团日期 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 操作人 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 修正值 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 名额 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 确认/占位 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 剩余 </div></th>
-          <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 状态 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:40px;"><div> 修正值 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:40px;"><div> 名额 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:40px;"><div> 报名数 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:40px;"><div> 剩余 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:40px;"><div> 状态 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 网店状态 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 收入款 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 支出款 </div></th>
