Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/header_kongguan.html
+++ b/Myerp/Tpl/Chanpin/header_kongguan.html
@@ -115,7 +115,7 @@
       <php>}if(cookie('show_action') == '申请'){
       </php>
       <input type="button" class="button" style="float:right" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe_baozhangitem('申请','报账单',<{$baozhangID}>,'<{$baozhang[title]}>');">
-      <php>}}else{</php>
+      <php>}}else{dump();</php>
       <php>if(count(explode('审核回退',$baozhang['shenhe_remark'])) > 1) $alterword = '计调未申请审核！！！';</php>
       <php>if(count(explode('未审核',$baozhang['shenhe_remark'])) > 1) $alterword = '计调未申请审核！！！';</php>
       <php>if(count(explode('申请',$baozhang['shenhe_remark'])) > 1) $alterword = '经理未审核！！！';</php>
