--- a/Myerp/Tpl/Chanpin/header_chanpin.html
+++ b/Myerp/Tpl/Chanpin/header_chanpin.html
@@ -108,7 +108,7 @@ function shenhe_after(data,status){
       </php>
       <input type="button" class="button" style="float:right" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe('申请');">
       <php>}}else{</php>
-      <input type="button" class="button" style="float:right" value="审核" name="button" onclick="alert('计调未申请审核！！！')" >
+      <input type="button" class="button" style="float:right" value="审核" name="button" onclick="alert('已<{$xianlu['shenhe_remark']}>！')" >
       <php>}if(A("Method")->checkshenheback($chanpinID,'线路')){</php>
       <input type="button" class="button" style="float:right" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$chanpinID}>,'线路');">
 	  <php>}</php>
