--- a/Myerp/Tpl/Chanpin/index.html
+++ b/Myerp/Tpl/Chanpin/index.html
@@ -27,6 +27,36 @@ function onshop(){
 	});
 	
 }
+
+
+function optoB2Cdepart(){
+	ThinkAjax.myloading('resultdiv');
+	var checkboxitem = new Array();
+	var i = 0;
+	jQuery(".checkboxitem").each(function(index, element) {
+		if(jQuery(this).attr("checked")){
+			checkboxitem[i] = jQuery(this).attr('value');
+			i++;
+		}
+	});
+	if(checkboxitem == ''){
+		ajaxalert('至少选择1项进行操作！');
+		return;
+	}
+	jQuery.ajax({
+		type:	"POST",
+		url:	"<{:SITE_INDEX}>Chanpin/optoB2Cdepart/chanpintype/线路",
+		data:	"checkboxitem="+checkboxitem,
+		success:function(msg){
+			ThinkAjax.myAjaxResponse(msg,'resultdiv',save_after);
+		}
+	});
+	
+}
+
+
+
+
 </script>
 <div id="main">
   <tp:includeCA file="Chanpin:left_fabu:'left_fabu'" />
@@ -48,6 +78,7 @@ function onshop(){
                     <input type="button" class="button" value=" 重置OM " onclick="resetOM()">
                     <php>}</php>
                     <input type="button" class="button" value=" 删除到回收站 " onclick="deletetohsz()">
+                    <input type="button" class="button" value=" 开放到电商部 " onclick="optoB2Cdepart()">
                     <input type="button" class="button" value=" 提交到网店 " onclick="onshop()">
                   <td nowrap="nowrap" align="right" class="paginationChangeButtons" style="color:#090"><{$page}></td>
                 </tr>
