Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/footer.html
+++ b/Myerp/Tpl/Index/footer.html
@@ -144,8 +144,8 @@ jQuery(".timeNews").hover(function(){
 
 
 jQuery(document).ready(function(){
-		getDingdanNotice();
-		window.setInterval(getDingdanNotice,60000);
+		//getDingdanNotice();
+		window.setInterval(getDingdanNotice,100000);
 	
 });
 
