--- a/Myerp/Tpl/SetSystem/index.html
+++ b/Myerp/Tpl/SetSystem/index.html
@@ -49,9 +49,9 @@
         </tr>
         <tr>
           <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/Administration.gif">&nbsp;<a href="javascript:void(0)" id="resetOM_create">重置产品OM</a></td>
-          <td width="30%">指定产品ID,产品类型，重置OM</td>
+          <td width="30%">指定产品ID,重置OM</td>
           <td width="20%" scope="row"><img border="0" width="16" height="16" align="absmiddle" src="<{:__PUBLIC__}>/myerp/images/Administration.gif">&nbsp;<a href="javascript:void(0)" id="resetOMTask_create">重置产品待审核OM</a></td>
-          <td width="30%"></td>
+          <td width="30%">指定产品ID,重置该产品待审核OM</td>
         </tr>
       </tbody>
     </table>
