Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/fabu.html
+++ b/Myerp/Tpl/Chanpin/fabu.html
@@ -230,7 +230,7 @@
             <td valign="top" colspan="3"><textarea name="xingchengtese" id="xingchengtese"><{$xianlu['xingchengtese']}></textarea>
               <script type="text/javascript">
           var editor = CKEDITOR.replace( 'xingchengtese' );
-          CKFinder.setupCKEditor( editor, '<{:__PUBLIC__}>/gulianstyle/ckfinder/' ) ;
+          CKFinder.setupCKEditor( editor, '<{:__PUBLIC__}>/myerp/ckfinder/' ) ;
           </script></td>
           </tr>
           <tr>
@@ -238,7 +238,7 @@
             <td valign="top" colspan="3"><textarea name="cantuanxuzhi" id="cantuanxuzhi"><{$xianlu['cantuanxuzhi']}></textarea>
               <script type="text/javascript">
           var editor = CKEDITOR.replace( 'cantuanxuzhi' );
-          CKFinder.setupCKEditor( editor, '<{:__PUBLIC__}>/gulianstyle/ckfinder/' ) ;
+          CKFinder.setupCKEditor( editor, '<{:__PUBLIC__}>/myerp/ckfinder/' ) ;
           </script></td>
           </tr>
         </tbody>
