--- a/Myerp/Tpl/Chanpin/xingcheng.html
+++ b/Myerp/Tpl/Chanpin/xingcheng.html
@@ -33,7 +33,7 @@
             <td valign="top" colspan="3"><textarea name="xingcheng" id="xingcheng"><{$xingcheng_1}></textarea>
               <script type="text/javascript">
           var editor = CKEDITOR.replace( 'xingcheng' );
-          CKFinder.setupCKEditor( editor, '<{:__PUBLIC__}>/gulianstyle/ckfinder/' ) ;
+          CKFinder.setupCKEditor( editor, '<{:__PUBLIC__}>/myerp/ckfinder/' ) ;
           </script></td>
                               </tr>
                             </tbody>
