--- a/Myerp/Tpl/Message/gonggao.html
+++ b/Myerp/Tpl/Message/gonggao.html
@@ -4,7 +4,7 @@
 
 <link href="<{:__PUBLIC__}>/gulianstyle/styles/jquery.autocomplete.css" rel="stylesheet" type="text/css" />
 <script src="<{:__PUBLIC__}>/gulianstyle/styles/jquery.autocomplete.min.js" language="javascript"></script>
-<script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/gulianstyle/My97DatePicker/WdatePicker.js"></script>
+<script language="javascript" type="text/javascript" src="<{:__PUBLIC__}>/myerp/My97DatePicker/WdatePicker.js"></script>
 <div id="main">
   <tp:includeCA file="Message:left_kongguan" />
   <div id="content" style="margin-left:180px;">
@@ -126,7 +126,7 @@
 </div>
 <script type="text/javascript">
 var editor = CKEDITOR.replace( 'message' );
-CKFinder.setupCKEditor( editor, '<{:__PUBLIC__}>/gulianstyle/ckfinder/' ) ;
+CKFinder.setupCKEditor( editor, '<{:__PUBLIC__}>/myerp/ckfinder/' ) ;
 
 function toselect(obj,classname){ 
 	if(jQuery(obj).attr('checked') == 'checked')
