--- a/Myerp/Tpl/Qianzheng/fabu.html
+++ b/Myerp/Tpl/Qianzheng/fabu.html
@@ -52,7 +52,7 @@
             <td valign="top" colspan="3"><textarea name="shuoming" id="shuoming"><{$qianzheng['shuoming']}></textarea>
               <script type="text/javascript">
           var editor = CKEDITOR.replace( 'shuoming' );
-          CKFinder.setupCKEditor( editor, '<{:__PUBLIC__}>/gulianstyle/ckfinder/' ) ;
+          CKFinder.setupCKEditor( editor, '<{:__PUBLIC__}>/myerp/ckfinder/' ) ;
           </script></td>
           </tr>
         </tbody>
