--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -48,6 +48,7 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
       <li> <a href="javascript:void(0)" id="userinfo_create">用户信息</a> </li>
       <li> <span>|</span> <a href="javascript:void(0)" id="password_create">修改密码</a> </li>
       <li> <span>|</span> <a target="_blank" href="<{:SITE_INDEX}>Index/FAQ">FAQ</a> </li>
+      <li> <span>|</span> <a target="_blank" href="<{:SITE_INDEX}>Index/help">使用手册</a> </li>
     </ul>
   </div>
   <div id="welcome" style="border:none; padding:18px 0 0 10px;"> 欢迎, <strong>
