Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Caiwu/left_hetong.html
+++ b/Myerp/Tpl/Caiwu/left_hetong.html
@@ -4,9 +4,9 @@
         <div id="navtab_1" class="leftList">
           <h3><span>功能模块</span></h3>
           <ul id="ul_shortcuts">
-            <li> <a href="<{:SITE_INDEX}>VIP/bankFileUpload">&nbsp;<span>|---合同搜索</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>VIP/uploadHistory">&nbsp;<span>|---合同操作记录</span></a> </li>
-            <li> <a href="<{:SITE_INDEX}>VIP/memberFileUpload">&nbsp;<span>|---回收站</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Caiwu/hetong">&nbsp;<span>|---合同搜索</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Caiwu/hetongHistory">&nbsp;<span>|---合同操作记录</span></a> </li>
+            <li> <a href="<{:SITE_INDEX}>Caiwu/hetong/listtype/删除">&nbsp;<span>|---回收站</span></a> </li>
           </ul>
         </div>
   </div>
