--- a/Myerp/Tpl/Xiaoshou/zituan.html
+++ b/Myerp/Tpl/Xiaoshou/zituan.html
@@ -118,8 +118,7 @@ $(function(){
     <php>if($xingcheng_1){</php>
     	<{$xingcheng_1}>
     <php>}else{</php>
-      <php>//$i = 0;foreach($xianlu[xingcheng] as $v){$i++;</php>
-      <php>for($i=1;$i<=$xianlu[tianshu];$i++){$v=$xianlu[xingcheng][$i-1];</php>
+      <php>$i = 0;foreach($xianlu[xingcheng] as $v){$i++;if($i>=$xianlu[tianshu])break;</php>
       <div class="ks_main_2nd">
         <div class="ks_main_3rd">
           <div class="ks_main_3rd_sonbav">第<{$i}>天</div>
