--- a/Myerp/Tpl/Xiaoshou/zituan.html
+++ b/Myerp/Tpl/Xiaoshou/zituan.html
@@ -117,8 +117,8 @@ $(function(){
     <div class="ks_main_1st">
     <php>if($xingcheng_1){</php>
     	<{$xingcheng_1}>
-    <php>}else{</php>
-      <php>$i = 0;foreach($xianlu[xingcheng] as $v){$i++;if($i>=$xianlu[tianshu])break;</php>
+    <php>}else{dump($xianlu)</php>
+      <php>$i = 0;foreach($xianlu[xingcheng] as $v){$i++;</php>
       <div class="ks_main_2nd">
         <div class="ks_main_3rd">
           <div class="ks_main_3rd_sonbav">第<{$i}>天</div>
