Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Xiaoshou/zituan.html
+++ b/Myerp/Tpl/Xiaoshou/zituan.html
@@ -118,7 +118,7 @@ $(function(){
     <php>if($xingcheng_1){</php>
     	<{$xingcheng_1}>
     <php>}else{</php>
-      <php>$i = 0;foreach($xianlu[xingcheng] as $v){$i++;if($i>=$xianlu['xianlu']['tianshu'])break;</php>
+      <php>$i = 0;foreach($xianlu[xingcheng] as $v){$i++;if($i>$xianlu['xianlu']['tianshu'])break;</php>
       <div class="ks_main_2nd">
         <div class="ks_main_3rd">
           <div class="ks_main_3rd_sonbav">第<{$i}>天</div>
