Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Chanpin/zituanxinxi.html
+++ b/Myerp/Tpl/Chanpin/zituanxinxi.html
@@ -210,7 +210,7 @@ function doComplete(data,status){
           </tr>
       </tbody>
     </table>
-    <php>dump($xingcheng_1);dump($zituan['xianlulist']['xingcheng']);dump($zituan['xianlulist']);
+    <php>dump($xingcheng_1);dump($zituan['xianlulist']['xingcheng']);
     
     $t =-1;foreach($zituan['xianlulist']['xingcheng'] as $xc) {$t++; </php>
     <input type="hidden" name="chanpinID[]" value="<{$xc['chanpinID']}>" />
