--- a/Myerp/Tpl/Chanpin/zituanxinxi.html
+++ b/Myerp/Tpl/Chanpin/zituanxinxi.html
@@ -210,9 +210,7 @@ function doComplete(data,status){
           </tr>
       </tbody>
     </table>
-    <php>
-    
-    $t =-1;foreach($zituan['xianlulist']['xingcheng'] as $xc) {$t++; </php>
+    <php>$t =-1;foreach($zituan['xianlulist']['xingcheng'] as $xc) {$t++; </php>
     <input type="hidden" name="chanpinID[]" value="<{$xc['chanpinID']}>" />
     <table cellspacing="1" cellpadding="0" border="0" width="100%" class="edit view">
       <tbody>
