--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -21,6 +21,11 @@
 <load href="__PUBLIC__/myerp/Thinkjs/Form/CheckForm_GP.js" />
 <link type="text/css" href="<{:__PUBLIC__}>/myerp/jquery-ui-1.8.20.custom/css/ui-lightness/jquery-ui-1.8.20.custom.css" rel="stylesheet" />
 <script type="text/javascript" src="<{:__PUBLIC__}>/myerp/jquery-ui-1.8.20.custom/js/jquery-ui-1.8.20.custom.min.js"></script>
+<!--复制到粘贴板-->
+<script src="<{:__PUBLIC__}>/myerp/zeroclipboard.js"></script>
+<script src="<{:__PUBLIC__}>/myerp/bootstrap.js"></script>
+<!--结束-->
+
 <script>
 
 var SITE_INDEX = '<{:SITE_INDEX}>';
