--- a/Myerp/Tpl/Chanpin/header_chanpin.html
+++ b/Myerp/Tpl/Chanpin/header_chanpin.html
@@ -42,7 +42,7 @@ function shenhe_after(data,status){
 function showxingcheng_web(){
 	var str = '<ul>';
 	<php>$count = 0 ;$t =-1;while ($count < $chanpin['xianlu']['tianshu']) {$t++; </php>
-		str += '<li><div class="cty_article_cont_title"><i>第'+<{$t+1}>+'天</i><h1>'+<{$xingcheng[$count]['title']}>+'</h1></div><div class="cty_article_cont_infos">'
+		str += '<li><div class="cty_article_cont_title"><i>第<{$t+1}>天</i><h1><{$xingcheng[$count]['title']}></h1></div><div class="cty_article_cont_infos">'
 		<php>if(strstr($xingcheng[$count]['chanyin'],'早餐')){</php>
 		str += '<b>早餐：</b>包含';
 		<php>}else{</php>
@@ -58,8 +58,8 @@ function showxingcheng_web(){
 		<php>}else{</php>
 		str += '<b>晚餐：</b>不含';
 		<php>}</php>
-		str += '<b>住宿：</b>'+<{$xingcheng[$count]['place']}>;
-		str += '<div class="cty_article_cont_cont">'+<{$xingcheng[$count]['content']}>+'</div></li>';
+		str += '<b>住宿：</b><{$xingcheng[$count]['place']}>';
+		str += '<div class="cty_article_cont_cont"><{$xingcheng[$count]['content']}></div></li>';
 	<php>$count++;}</php>
 	str += '</ul>';
 	
