Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Chanpin/header_chanpin.html
+++ b/Myerp/Tpl/Chanpin/header_chanpin.html
@@ -69,6 +69,7 @@ function showxingcheng_web(){
 	clip.addEventListener('mouseDown',function() {
 		clip.setText(str);
 	});
+	alert(str)
 	alert('行程已复制到粘贴板');
 }
 
