--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -23,7 +23,9 @@
 <script type="text/javascript" src="<{:__PUBLIC__}>/myerp/jquery-ui-1.8.20.custom/js/jquery-ui-1.8.20.custom.min.js"></script>
 <!--复制到粘贴板-->
 <script src="<{:__PUBLIC__}>/myerp/zeroclipboard.js"></script>
+<script src="<{:__PUBLIC__}>/myerp/jquery-1.8.1.min.js"></script>
 <script src="<{:__PUBLIC__}>/myerp/bootstrap.js"></script>
+
 <!--结束-->
 
 <script>
